# the-thoralf-plugin

./: .travis.yml  DOCUMENTATION.md  README.md  TODO.md  index.html  stack.yaml  thoralf-plugin.cabal
.github/workflows/: cabal.yml  stack.yml
presentation/: Makefile  README.md  presentation.html  slides.md
src/: DESIGN.md  DOCUMENTATION.md
src/Data/: Vec.hs
src/ThoralfPlugin/: Convert.hs  Deleted.hs  Encode.hs  Plugin.hs  ThoralfPlugin.hs  Variables.hs
src/ThoralfPlugin/Box/: .Nat.hs.swp  Bool.hs  FiniteMap.hs  Nat.hs  Symbol.hs
src/ThoralfPlugin/Box/Predicates/: Bool.hs  Nat.hs
src/ThoralfPlugin/Encode/: Bool.hs  FiniteMap.hs  Nat.hs  Symbol.hs  TheoryEncoding.hs  UoM.hs
src/ThoralfPlugin/Singletons/: Nat.hs  Symbol.hs
src/ThoralfPlugin/Theory/: .Bool.hs.swp  Bool.hs  DisEq.hs  FiniteMap.hs  UoM.hs
stack/: stack-8.4.4.yaml
test/: .Main.hs.swp  FiniteMaps.hs  Main.hs  Nat.hs  RowTypes.hs  UoM.hs  output
test-suite-rows/: FiniteMaps.hs  Main.hs  Nat.hs  RowTypes.hs
test-suite-units/: Main.hs  UoM.hs
thoralf-plugin/: ChangeLog.md  LICENSE  thoralf-plugin.cabal
thoralf-plugin/src/ThoralfPlugin/: Plugin.hs
thoralf-plugin/src/ThoralfPlugin/Box/: TheoryBox.hs  UoM.hs
thoralf-plugin/src/ThoralfPlugin/Singletons/: Symbol.hs
thoralf-plugin/src/ThoralfPlugin/Theory/: DisEq.hs  FiniteMap.hs  UoM.hs
thoralf-plugin/test/: Main.hs
z3/: logic.z3  union.z3
