name:                thoralf-plugin
version:             0.1.0.0
license:             MIT
license-file:        LICENSE
author:              Divesh Otwani
maintainer:          dotwani@haverford.edu
category:            Development
build-type:          Simple
extra-source-files:  ChangeLog.md
cabal-version:       >=1.10

library
  hs-source-dirs:        src
  ghc-options:           -Wall
  default-language:      Haskell2010
  exposed-modules:       ThoralfPlugin.Plugin
                       , ThoralfPlugin.ThoralfPlugin
                       , ThoralfPlugin.Convert
                       , ThoralfPlugin.Variables

                       , ThoralfPlugin.Singletons.Symbol
                       , ThoralfPlugin.Singletons.Nat

                       , ThoralfPlugin.Theory.DisEq
                       , ThoralfPlugin.Theory.FiniteMap
                       , ThoralfPlugin.Theory.UoM
                       , ThoralfPlugin.Theory.Bool


  other-modules:         ThoralfPlugin.Encode
                       , ThoralfPlugin.Encode.TheoryEncoding
                       , ThoralfPlugin.Encode.Nat
                       , ThoralfPlugin.Encode.FiniteMap
                       , ThoralfPlugin.Encode.Symbol
                       , ThoralfPlugin.Encode.UoM
                       , ThoralfPlugin.Encode.Bool

                       , Data.Vec

  other-extensions:      TypeFamilies
                       , TypeInType
                       , GADTs
                       , RecordWildCards

  build-depends:         base
                       , containers
                       , ghc
                       , ghc-prim
                       , hashable
                       , mtl
                       , simple-smt



Test-suite tests
  type:                  exitcode-stdio-1.0
  default-language:      Haskell2010
  hs-source-dirs:        test
  main-is:               Main.hs
  other-modules:
  ghc-options:           -Wall -fplugin ThoralfPlugin.Plugin
  build-depends:         base
                       , thoralf-plugin


