name:                thoralf-plugin
version:             0.1.0.0
synopsis:            An extensible GHC typechecker plugin based on Z3
description:         Thoralf is a small yet extensible typechecker plugin based on the
                     Z3 SMT solver. It is designed to be easy to extend with new
                     theories.
license:             MIT
license-file:        LICENSE
author:              Divesh Otwani
maintainer:          dotwani@haverford.edu
category:            Development
build-type:          Simple
extra-source-files:  ChangeLog.md
cabal-version:       >=1.10
tested-with:         GHC==8.4.3

library
  hs-source-dirs:        src
  ghc-options:           -Wall
  default-language:      Haskell2010
  exposed-modules:       ThoralfPlugin.Plugin
                       , ThoralfPlugin.ThoralfPlugin
                       , ThoralfPlugin.Convert
                       , ThoralfPlugin.Variables

                       , ThoralfPlugin.Singletons.Symbol
                       , ThoralfPlugin.Singletons.Nat

                       , ThoralfPlugin.Theory.DisEq
                       , ThoralfPlugin.Theory.FiniteMap
                       , ThoralfPlugin.Theory.UoM
                       , ThoralfPlugin.Theory.Bool


  other-modules:         ThoralfPlugin.Encode
                       , ThoralfPlugin.Encode.TheoryEncoding
                       , ThoralfPlugin.Encode.Nat
                       , ThoralfPlugin.Encode.FiniteMap
                       , ThoralfPlugin.Encode.Symbol
                       , ThoralfPlugin.Encode.UoM
                       , ThoralfPlugin.Encode.Bool

                       , Data.Vec

  other-extensions:      TypeFamilies
                       , TypeInType
                       , GADTs
                       , RecordWildCards

  build-depends:         base < 5
                       , containers
                       , ghc
                       , ghc-prim
                       , hashable
                       , mtl
                       , simple-smt



Test-suite rows
  type:                  exitcode-stdio-1.0
  default-language:      Haskell2010
  hs-source-dirs:        test-suite-rows
  main-is:               Main.hs
  other-modules:         Nat, FiniteMaps, RowTypes
  ghc-options:           -Wall -fplugin ThoralfPlugin.Plugin
  build-depends:         base
                       , thoralf-plugin

Test-suite units
  type:                  exitcode-stdio-1.0
  default-language:      Haskell2010
  hs-source-dirs:        test-suite-units
  main-is:               Main.hs
  other-modules:         UoM
  ghc-options:           -Wall -fplugin ThoralfPlugin.Plugin
  build-depends:         base
                       , QuickCheck
                       , thoralf-plugin
                       , tasty
                       , tasty-hunit
                       , tasty-quickcheck
                       , tasty-th
  if impl(ghc >= 9.2.0)
    build-depends: singletons-base
  else
    build-depends: singletons < 3.0
